WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53621
[Qt] Fix LayoutTests/media/restore-from-page-cache.html
https://bugs.webkit.org/show_bug.cgi?id=53621
Summary
[Qt] Fix LayoutTests/media/restore-from-page-cache.html
Yi Shen
Reported
2011-02-02 13:10:27 PST
The network-state of mediaplayerprivateqt should be changed to MediaPlayer::Loaded when there is enough data. Patch is coming.
Attachments
first try
(2.59 KB, patch)
2011-02-02 14:03 PST
,
Yi Shen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yi Shen
Comment 1
2011-02-02 14:03:05 PST
Created
attachment 80967
[details]
first try
WebKit Commit Bot
Comment 2
2011-02-07 07:58:09 PST
Comment on
attachment 80967
[details]
first try Clearing flags on attachment: 80967 Committed
r77814
: <
http://trac.webkit.org/changeset/77814
>
WebKit Commit Bot
Comment 3
2011-02-07 07:58:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug