2011-02-07  Yi Shen  <yi.4.shen@nokia.com>

Reviewed by Tor Arne Vestbø.

        [Qt] Fix LayoutTests/media/restore-from-page-cache.html
        https://bugs.webkit.org/show_bug.cgi?id=53621

        Unskip media/restore-from-page-cache.html for Qt.

        * platform/qt/Skipped:
2011-02-07  Yi Shen  <yi.4.shen@nokia.com>

        Reviewed by Tor Arne Vestbø.

        [Qt] Fix LayoutTests/media/restore-from-page-cache.html
        https://bugs.webkit.org/show_bug.cgi?id=53621

        Changed the networkState to MediaPlayer::Loaded when
        MediaPlayerPrivateQt has enough data.

        Test: media/restore-from-page-cache.html

        * platform/graphics/qt/MediaPlayerPrivateQt.cpp:
        (WebCore::MediaPlayerPrivateQt::updateStates):

Canonical link: https://commits.webkit.org/67875@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77814 268f45cc-cd09-0410-ab3c-d52691b4dbfc